[gd_scene load_steps=9 format=3 uid="uid://bxjov6txnsn0n"]

[ext_resource type="Script" path="res://world.gd" id="1_i5kc8"]
[ext_resource type="PackedScene" uid="uid://boigf1iu1s4vh" path="res://environment.tscn" id="1_pvopv"]
[ext_resource type="Texture2D" uid="uid://bxfjssdqoj705" path="res://addons/kenney_particle_pack/circle_05.png" id="3_p4iuf"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_i5f53"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_in7oy"]
sky_material = SubResource("ProceduralSkyMaterial_i5f53")

[sub_resource type="Environment" id="Environment_44jh0"]
background_mode = 2
sky = SubResource("Sky_in7oy")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ko3m"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_co0g0"]
bg_color = Color(0, 1, 0, 1)

[node name="World" type="Node"]
script = ExtResource("1_i5kc8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_44jh0")

[node name="Environment" parent="." instance=ExtResource("1_pvopv")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main Menu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.424479
anchor_top = 0.412037
anchor_right = 0.575521
anchor_bottom = 0.588889
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main Menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host Button" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join Button" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.485
anchor_top = 0.485
anchor_right = 0.515
anchor_bottom = 0.515
offset_left = -931.2
offset_top = -523.8
offset_right = 931.2
offset_bottom = 523.8
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(960, 540)
texture = ExtResource("3_p4iuf")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Health Bar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.324479
anchor_top = 0.0796296
anchor_right = 0.675521
anchor_bottom = 0.142593
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_3ko3m")
theme_override_styles/fill = SubResource("StyleBoxFlat_co0g0")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Address Label" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.314844
anchor_top = 0.870833
anchor_right = 0.685156
anchor_bottom = 0.970833
offset_right = 3.05176e-05
offset_bottom = -2.00272e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Address:"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Pause Menu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Pause Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.389583
anchor_top = 0.412037
anchor_right = 0.610417
anchor_bottom = 0.588889
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Pause Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/Pause Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume Button" type="Button" parent="CanvasLayer/Pause Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings Button" type="Button" parent="CanvasLayer/Pause Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Quit Button" type="Button" parent="CanvasLayer/Pause Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Settings Menu" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.424479
anchor_top = 0.401389
anchor_right = 0.575521
anchor_bottom = 0.599537
offset_top = 11.5
offset_bottom = -11.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings Menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/Settings Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Settings Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sensitivity:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer/Settings Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 30.0

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Settings Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="Change Color" type="Button" parent="CanvasLayer/Settings Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Change Color"

[node name="Close Button" type="Button" parent="CanvasLayer/Settings Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close Settings"

[node name="Color Menu" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.424479
anchor_top = 0.401389
anchor_right = 0.575521
anchor_bottom = 0.599537
offset_top = 11.5
offset_bottom = -11.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Color Menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Color Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ColorPicker" type="ColorPicker" parent="CanvasLayer/Color Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
picker_shape = 2

[node name="Back Button" type="Button" parent="CanvasLayer/Color Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back Button"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/Host Button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/Join Button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause Menu/MarginContainer/VBoxContainer/Resume Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause Menu/MarginContainer/VBoxContainer/Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause Menu/MarginContainer/VBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/Settings Menu/MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="CanvasLayer/Settings Menu/MarginContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="CanvasLayer/Settings Menu/MarginContainer/VBoxContainer/Change Color" to="." method="_on_change_color_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings Menu/MarginContainer/VBoxContainer/Close Button" to="." method="_on_close_button_pressed"]
[connection signal="color_changed" from="CanvasLayer/Color Menu/MarginContainer/VBoxContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="CanvasLayer/Color Menu/MarginContainer/VBoxContainer/Back Button" to="." method="_on_back_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
